--- a/plugin.css
+++ b/plugin.css
@@ -1,17 +1,28 @@
 i.mce-i-smiley {
-	background: url(../../../wp-includes/images/smilies/simple-smile.png) no-repeat 50% 50%;
-	-webkit-background-size: contain;
-	background-size: contain;
+    background: url(../../../wp-includes/images/smilies/simple-smile.png) no-repeat 50% 50%;
+    -webkit-background-size: contain;
+    background-size: contain;
 }
 
 .mce-smily .mce-grid a {
-	border: 0;
-	padding: 3px;
-	-webkit-border-radius: 1px;
-	-moz-border-radius: 1px;
-	border-radius: 1px;
+    width: 24px;
+    height: 24px;
+    padding: 3px;
+    text-align: center;
+    border: 0;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    border-radius: 1px;
 }
 
 .mce-smily .mce-grid a:hover {
-	background: #b4b9be;
+    background: #b4b9be;
+}
+
+.mce-smily .mce-grid a img {
+    width: auto!important;
+    height: auto!important;
+    max-width: 100%;
+    max-height: 100%;
+    vertical-align: middle;
 }
